fixing spacing

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,7 +1,8 @@
 @use "../../../sass/abstracts/colors" as *;
 footer{
     color: $secondary-color;
-
+    margin-top: 20vh;
+    margin-bottom: 20px;
     
 }
 
